syntax = "proto3";

package pb;
option go_package = "./pb";



service AuthService {
    rpc UserSignup(UserSignupRequest) returns (UserSignupResponse){};
   
}

// user signup
message UserSignupRequest {
    string first_name = 1;
    string middle_name=2;
    string last_name = 3;
    uint64 age = 4;
    string gender =5;
    string email = 6;
    string phone  = 7;
    string account =8;
    string password = 9;
}
message UserSignupResponse{
    string user_id = 1;
}
